translator/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CIN
    COMMENT
    COUT
    DOUBLE
    ELSE
    ENDL
    FALSE
    ID
    IN
    OUT
    TRUE

Grammar

Rule 0     S' -> start_symbol
Rule 1     start_symbol -> program
Rule 2     program -> program_components
Rule 3     program -> empty
Rule 4     program_components -> program_component
Rule 5     program_components -> program_component program_components
Rule 6     program_components -> empty
Rule 7     program_component -> function_definition
Rule 8     program_component -> class_definition
Rule 9     program_component -> including
Rule 10    program_component -> var_declaration
Rule 11    program_component -> array_declaration
Rule 12    program_component -> empty
Rule 13    using_namespace_std -> USING NAMESPACE STD SEMICOLON
Rule 14    including -> HASH INCLUDE LIBRARY
Rule 15    function_definition -> type_function_definition
Rule 16    function_definition -> void_function_definition
Rule 17    type_function_definition -> type VAR LEFT_BR function_var_declaration RIGHT_BR LEFT_BR_CURLY instructions returning RIGHT_BR_CURLY
Rule 18    void_function_definition -> VOID VAR LEFT_BR function_var_declaration RIGHT_BR LEFT_BR_CURLY instructions RIGHT_BR_CURLY
Rule 19    function_var_declaration -> type VAR
Rule 20    function_var_declaration -> empty
Rule 21    class_definition -> CLASS STRING LEFT_BR_CURLY protection_level COLON class_declarations RIGHT_BR_CURLY SEMICOLON
Rule 22    protection_level -> PUBLIC
Rule 23    protection_level -> PRIVATE
Rule 24    protection_level -> PROTECTED
Rule 25    class_declaration -> var_declaration
Rule 26    class_declaration -> function_definition
Rule 27    class_declarations -> class_declaration
Rule 28    class_declarations -> class_declaration class_declarations
Rule 29    instructions -> instruction
Rule 30    instructions -> instruction instructions
Rule 31    instruction -> loop
Rule 32    instruction -> if_statement
Rule 33    instruction -> assignment
Rule 34    instruction -> operation
Rule 35    while_loop -> WHILE LEFT_BR comparisons RIGHT_BR LEFT_BR_CURLY instructions RIGHT_BR_CURLY
Rule 36    for_loop_statement -> FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR LESS INT_NUMBER SEMICOLON increment RIGHT_BR
Rule 37    for_loop_statement -> FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR LESS_EQUAL INT_NUMBER SEMICOLON increment RIGHT_BR
Rule 38    for_loop_statement -> FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR GREATER INT_NUMBER SEMICOLON decrement RIGHT_BR
Rule 39    for_loop_statement -> FOR LEFT_BR INT VAR EQUAL INT_NUMBER SEMICOLON VAR GREATER_EQUAL INT_NUMBER SEMICOLON decrement RIGHT_BR
Rule 40    for_loop -> for_loop_statement LEFT_BR_CURLY instructions RIGHT_BR_CURLY
Rule 41    loop -> while_loop
Rule 42    loop -> for_loop
Rule 43    if_statement -> IF LEFT_BR comparisons RIGHT_BR LEFT_BR_CURLY instructions RIGHT_BR_CURLY
Rule 44    comparisons -> comparison
Rule 45    comparisons -> comparison conjunction comparisons
Rule 46    comparator -> LESS
Rule 47    comparator -> LESS_EQUAL
Rule 48    comparator -> GREATER
Rule 49    comparator -> GREATER_EQUAL
Rule 50    comparator -> EQUAL_EQUAL
Rule 51    comparator -> NOT_EQUAL
Rule 52    operator -> PLUS
Rule 53    operator -> MINUS
Rule 54    operator -> MULTIPLY
Rule 55    operator -> DIVIDE
Rule 56    type -> INT
Rule 57    type -> CHAR
Rule 58    type -> STRING
Rule 59    type -> BOOL
Rule 60    type -> FLOAT
Rule 61    type -> LONG
Rule 62    type -> SHORT
Rule 63    conjunction -> AND
Rule 64    conjunction -> OR
Rule 65    string_value -> TEXT
Rule 66    string_value -> SIGN
Rule 67    number -> INT_NUMBER
Rule 68    number -> FLOAT_NUMBER
Rule 69    value -> number
Rule 70    value -> value
Rule 71    increment -> VAR PLUS_PLUS SEMICOLON
Rule 72    decrement -> VAR MINUS_MINUS SEMICOLON
Rule 73    get_array_element -> VAR LEFT_BR_SQUARED INT_NUMBER RIGHT_BR_SQUARED
Rule 74    operation -> increment
Rule 75    operation -> decrement
Rule 76    operation -> value operator value SEMICOLON
Rule 77    assignment -> VAR EQUAL value SEMICOLON
Rule 78    var_declaration -> type VAR SEMICOLON
Rule 79    var_declaration -> array_declaration
Rule 80    array_declaration -> type get_array_element SEMICOLON
Rule 81    comparison -> value comparator value
Rule 82    returning -> RETURN value SEMICOLON
Rule 83    empty -> <empty>

Terminals, with rules where they appear

AND                  : 63
BOOL                 : 59
BREAK                : 
CHAR                 : 57
CIN                  : 
CLASS                : 21
COLON                : 21
COMMENT              : 
COUT                 : 
DIVIDE               : 55
DOUBLE               : 
ELSE                 : 
ENDL                 : 
EQUAL                : 36 37 38 39 77
EQUAL_EQUAL          : 50
FALSE                : 
FLOAT                : 60
FLOAT_NUMBER         : 68
FOR                  : 36 37 38 39
GREATER              : 38 48
GREATER_EQUAL        : 39 49
HASH                 : 14
ID                   : 
IF                   : 43
IN                   : 
INCLUDE              : 14
INT                  : 36 37 38 39 56
INT_NUMBER           : 36 36 37 37 38 38 39 39 67 73
LEFT_BR              : 17 18 35 36 37 38 39 43
LEFT_BR_CURLY        : 17 18 21 35 40 43
LEFT_BR_SQUARED      : 73
LESS                 : 36 46
LESS_EQUAL           : 37 47
LIBRARY              : 14
LONG                 : 61
MINUS                : 53
MINUS_MINUS          : 72
MULTIPLY             : 54
NAMESPACE            : 13
NOT_EQUAL            : 51
OR                   : 64
OUT                  : 
PLUS                 : 52
PLUS_PLUS            : 71
PRIVATE              : 23
PROTECTED            : 24
PUBLIC               : 22
RETURN               : 82
RIGHT_BR             : 17 18 35 36 37 38 39 43
RIGHT_BR_CURLY       : 17 18 21 35 40 43
RIGHT_BR_SQUARED     : 73
SEMICOLON            : 13 21 36 36 37 37 38 38 39 39 71 72 76 77 78 80 82
SHORT                : 62
SIGN                 : 66
STD                  : 13
STRING               : 21 58
TEXT                 : 65
TRUE                 : 
USING                : 13
VAR                  : 17 18 19 36 36 37 37 38 38 39 39 71 72 73 77 78
VOID                 : 18
WHILE                : 35
error                : 

Nonterminals, with rules where they appear

array_declaration    : 11 79
assignment           : 33
class_declaration    : 27 28
class_declarations   : 21 28
class_definition     : 8
comparator           : 81
comparison           : 44 45
comparisons          : 35 43 45
conjunction          : 45
decrement            : 38 39 75
empty                : 3 6 12 20
for_loop             : 42
for_loop_statement   : 40
function_definition  : 7 26
function_var_declaration : 17 18
get_array_element    : 80
if_statement         : 32
including            : 9
increment            : 36 37 74
instruction          : 29 30
instructions         : 17 18 30 35 40 43
loop                 : 31
number               : 69
operation            : 34
operator             : 76
program              : 1
program_component    : 4 5
program_components   : 2 5
protection_level     : 21
returning            : 17
start_symbol         : 0
string_value         : 
type                 : 17 19 78 80
type_function_definition : 15
using_namespace_std  : 
value                : 70 76 76 77 81 81 82
var_declaration      : 10 25
void_function_definition : 16
while_loop           : 41

Parsing method: LALR

state 0

    (0) S' -> . start_symbol
    (1) start_symbol -> . program
    (2) program -> . program_components
    (3) program -> . empty
    (4) program_components -> . program_component
    (5) program_components -> . program_component program_components
    (6) program_components -> . empty
    (83) empty -> .
    (7) program_component -> . function_definition
    (8) program_component -> . class_definition
    (9) program_component -> . including
    (10) program_component -> . var_declaration
    (11) program_component -> . array_declaration
    (12) program_component -> . empty
    (15) function_definition -> . type_function_definition
    (16) function_definition -> . void_function_definition
    (21) class_definition -> . CLASS STRING LEFT_BR_CURLY protection_level COLON class_declarations RIGHT_BR_CURLY SEMICOLON
    (14) including -> . HASH INCLUDE LIBRARY
    (78) var_declaration -> . type VAR SEMICOLON
    (79) var_declaration -> . array_declaration
    (80) array_declaration -> . type get_array_element SEMICOLON
    (17) type_function_definition -> . type VAR LEFT_BR function_var_declaration RIGHT_BR LEFT_BR_CURLY instructions returning RIGHT_BR_CURLY
    (18) void_function_definition -> . VOID VAR LEFT_BR function_var_declaration RIGHT_BR LEFT_BR_CURLY instructions RIGHT_BR_CURLY
    (56) type -> . INT
    (57) type -> . CHAR
    (58) type -> . STRING
    (59) type -> . BOOL
    (60) type -> . FLOAT
    (61) type -> . LONG
    (62) type -> . SHORT

  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for HASH resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LONG resolved as shift
  ! shift/reduce conflict for SHORT resolved as shift
    $end            reduce using rule 83 (empty -> .)
    CLASS           shift and go to state 13
    HASH            shift and go to state 15
    VOID            shift and go to state 17
    INT             shift and go to state 18
    CHAR            shift and go to state 19
    STRING          shift and go to state 14
    BOOL            shift and go to state 20
    FLOAT           shift and go to state 21
    LONG            shift and go to state 22
    SHORT           shift and go to state 23

  ! CLASS           [ reduce using rule 83 (empty -> .) ]
  ! HASH            [ reduce using rule 83 (empty -> .) ]
  ! VOID            [ reduce using rule 83 (empty -> .) ]
  ! INT             [ reduce using rule 83 (empty -> .) ]
  ! CHAR            [ reduce using rule 83 (empty -> .) ]
  ! STRING          [ reduce using rule 83 (empty -> .) ]
  ! BOOL            [ reduce using rule 83 (empty -> .) ]
  ! FLOAT           [ reduce using rule 83 (empty -> .) ]
  ! LONG            [ reduce using rule 83 (empty -> .) ]
  ! SHORT           [ reduce using rule 83 (empty -> .) ]

    start_symbol                   shift and go to state 1
    program                        shift and go to state 2
    program_components             shift and go to state 3
    empty                          shift and go to state 4
    program_component              shift and go to state 5
    function_definition            shift and go to state 6
    class_definition               shift and go to state 7
    including                      shift and go to state 8
    var_declaration                shift and go to state 9
    array_declaration              shift and go to state 10
    type_function_definition       shift and go to state 11
    void_function_definition       shift and go to state 12
    type                           shift and go to state 16

state 1

    (0) S' -> start_symbol .



state 2

    (1) start_symbol -> program .

    $end            reduce using rule 1 (start_symbol -> program .)


state 3

    (2) program -> program_components .

    $end            reduce using rule 2 (program -> program_components .)


state 4

    (3) program -> empty .
    (6) program_components -> empty .
    (12) program_component -> empty .

  ! reduce/reduce conflict for $end resolved using rule 3 (program -> empty .)
  ! reduce/reduce conflict for $end resolved using rule 3 (program -> empty .)
    $end            reduce using rule 3 (program -> empty .)
    CLASS           reduce using rule 12 (program_component -> empty .)
    HASH            reduce using rule 12 (program_component -> empty .)
    VOID            reduce using rule 12 (program_component -> empty .)
    INT             reduce using rule 12 (program_component -> empty .)
    CHAR            reduce using rule 12 (program_component -> empty .)
    STRING          reduce using rule 12 (program_component -> empty .)
    BOOL            reduce using rule 12 (program_component -> empty .)
    FLOAT           reduce using rule 12 (program_component -> empty .)
    LONG            reduce using rule 12 (program_component -> empty .)
    SHORT           reduce using rule 12 (program_component -> empty .)

  ! $end            [ reduce using rule 6 (program_components -> empty .) ]
  ! $end            [ reduce using rule 12 (program_component -> empty .) ]


state 5

    (4) program_components -> program_component .
    (5) program_components -> program_component . program_components
    (4) program_components -> . program_component
    (5) program_components -> . program_component program_components
    (6) program_components -> . empty
    (7) program_component -> . function_definition
    (8) program_component -> . class_definition
    (9) program_component -> . including
    (10) program_component -> . var_declaration
    (11) program_component -> . array_declaration
    (12) program_component -> . empty
    (83) empty -> .
    (15) function_definition -> . type_function_definition
    (16) function_definition -> . void_function_definition
    (21) class_definition -> . CLASS STRING LEFT_BR_CURLY protection_level COLON class_declarations RIGHT_BR_CURLY SEMICOLON
    (14) including -> . HASH INCLUDE LIBRARY
    (78) var_declaration -> . type VAR SEMICOLON
    (79) var_declaration -> . array_declaration
    (80) array_declaration -> . type get_array_element SEMICOLON
    (17) type_function_definition -> . type VAR LEFT_BR function_var_declaration RIGHT_BR LEFT_BR_CURLY instructions returning RIGHT_BR_CURLY
    (18) void_function_definition -> . VOID VAR LEFT_BR function_var_declaration RIGHT_BR LEFT_BR_CURLY instructions RIGHT_BR_CURLY
    (56) type -> . INT
    (57) type -> . CHAR
    (58) type -> . STRING
    (59) type -> . BOOL
    (60) type -> . FLOAT
    (61) type -> . LONG
    (62) type -> . SHORT

  ! reduce/reduce conflict for $end resolved using rule 4 (program_components -> program_component .)
  ! shift/reduce conflict for CLASS resolved as shift
  ! shift/reduce conflict for HASH resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for LONG resolved as shift
  ! shift/reduce conflict for SHORT resolved as shift
    $end            reduce using rule 4 (program_components -> program_component .)
    CLASS           shift and go to state 13
    HASH            shift and go to state 15
    VOID            shift and go to state 17
    INT             shift and go to state 18
    CHAR            shift and go to state 19
    STRING          shift and go to state 14
    BOOL            shift and go to state 20
    FLOAT           shift and go to state 21
    LONG            shift and go to state 22
    SHORT           shift and go to state 23

  ! $end            [ reduce using rule 83 (empty -> .) ]
  ! CLASS           [ reduce using rule 83 (empty -> .) ]
  ! HASH            [ reduce using rule 83 (empty -> .) ]
  ! VOID            [ reduce using rule 83 (empty -> .) ]
  ! INT             [ reduce using rule 83 (empty -> .) ]
  ! CHAR            [ reduce using rule 83 (empty -> .) ]
  ! STRING          [ reduce using rule 83 (empty -> .) ]
  ! BOOL            [ reduce using rule 83 (empty -> .) ]
  ! FLOAT           [ reduce using rule 83 (empty -> .) ]
  ! LONG            [ reduce using rule 83 (empty -> .) ]
  ! SHORT           [ reduce using rule 83 (empty -> .) ]

    program_component              shift and go to state 5
    program_components             shift and go to state 24
    empty                          shift and go to state 25
    function_definition            shift and go to state 6
    class_definition               shift and go to state 7
    including                      shift and go to state 8
    var_declaration                shift and go to state 9
    array_declaration              shift and go to state 10
    type_function_definition       shift and go to state 11
    void_function_definition       shift and go to state 12
    type                           shift and go to state 16

state 6

    (7) program_component -> function_definition .
